christoffel symbols added

--- a/header.tex
+++ b/header.tex
@@ -12,7 +12,7 @@
 
 %Page Setup
 \documentclass[
-	11pt, 
+	10pt, 
 	oneside, 
 	a4paper,
 	reqno,
@@ -160,6 +160,7 @@
 \DeclareMathOperator\Log{Log}
 \DeclareMathOperator\Arg{Arg}
 \DeclareMathOperator\sech{sech}
+\DeclareMathOperator\Length{Length}
 %\usepackage{hhline}
 %\usepackage{booktabs} 
 %\usepackage{array}
