--- a/header.tex
+++ b/header.tex
@@ -53,6 +53,7 @@
 
 %Title
 \usepackage[foot]{amsaddr}
+\usepackage{mathptmx}
 \usepackage{xspace}
 \makeatletter
 \def\@textbottom{\vskip \z@ \@plus 1pt}
@@ -161,6 +162,7 @@
 \DeclareMathOperator\Arg{Arg}
 \DeclareMathOperator\sech{sech}
 \DeclareMathOperator\Length{Length}
+\DeclareMathOperator\Area{Area}
 %\usepackage{hhline}
 %\usepackage{booktabs} 
 %\usepackage{array}
