--- a/header.tex
+++ b/header.tex
@@ -226,8 +226,12 @@
   topline=false,
   rightline=false,
   leftline=false]{theorem}{Theorem}[section]
-
-\newtheorem*{definition*}{Definition}
+\newmdtheoremenv[%
+  backgroundcolor=anti-flashwhite,
+  bottomline=false,
+  topline=false,
+  rightline=false,
+  leftline=false]{example}{Example}[section]\newtheorem*{definition*}{Definition}
 %\newtheorem{definition}{Definition}[section]
 \newtheorem*{lemma*}{Lemma}
 %\newtheorem{lemma}{Lemma}[section]
@@ -237,7 +241,7 @@
 \newtheorem{corollary}{Corollary}[section]
 \newtheorem*{theorem*}{Theorem}
 %\newtheorem{theorem}{Theorem}[section]
-\newtheorem{example}{Example}[section]
+%\newtheorem{example}{Example}[section]
 \newtheorem*{remark*}{Remark}
 \newtheorem{remark}{Remark}[section]
 %German non-ASCII-Characters
