--- a/summary.tex
+++ b/summary.tex
@@ -10,7 +10,7 @@
 \thispagestyle{fancy}
 
 %\tableofcontents
-
+\tikzset{external/force remake}
 \originalsectionstyle
 
 \section{Topology}
@@ -153,12 +153,86 @@
 	\begin{equation}
 		T(t) := \frac{c'(t)}{\norm[0]{c'(t)}}
 	\end{equation}
+
+	Furthermore if $c$ is regular, for each $t \in \intoo{a,b}$ we define the \emph{unit normal vector} and the \emph{unit binormal vector} by
+
+	\begin{equation}
+		N(t) := \frac{T'(t)}{\norm[0]{T'(t)}} \qquad \text{and} \qquad B(t) := T(t) \times N(t)
+	\end{equation}
+
+	\noindent respectively whenever $\norm[0]{T'(t)} \neq 0$. 
 \end{definition}
+
+\begin{figure}[h!tb]
+	\centering
+	\begin{tikzpicture}
+		\draw [->,line width = .4mm] (0,0) -- (1,1);
+		\draw [->,line width = .4mm] (0,0) -- (0,1.5);
+		\draw [->,line width = .4mm] (0,0) -- (-1.5,.5);
+		\node (T) at (1.2,1.2) {$T$};
+		\node (B) at (0,1.7) {$B$};
+		\node (N) at (-1.7,.7) {$N$};
+		\node (c) at (.4,-.2) {$c(t)$};
+		\draw (-2,-1) .. controls (-.5,-.5) .. (0,0) .. controls (1,1) .. (-1,1.5);
+	\end{tikzpicture}
+	\caption{Frenet frame of a strongly regular curve $c: \intoo{a,b} \to \mathbb{R}^3$ at some $t \in \intoo{a,b}$.}
+\end{figure}
+
+
+\vspace{1mm}
+
+\begin{definition}
+	A regular curve $c: \intoo{a,b} \to \mathbb{R}^3$ is \emph{strongly regular} if one of the following equivalent conditions hold for all $t \in \intoo{a,b}$:
+
+	\begin{enumerate}[label = (\roman*)]
+		\item $\norm[0]{T'(t)} \neq 0$;
+		\item $\cbr[0]{c'(t),c''(t)}$ is linearly independent;
+		\item $c'(t) \times c''(t) \neq 0$.
+	\end{enumerate}
+\end{definition}
+
+\vspace{1mm}
+
+\begin{theorem}\emph{(Frenet-Serret)}
+	Let $c: \intoo{a,b} \to \mathbb{R}^3$ be a strongly regular unit speed curve. Then
+
+	\begin{equation}
+		\begin{pmatrix}
+			T\\
+			N\\
+			B
+		\end{pmatrix}' = \begin{pmatrix}
+			0 & \kappa & 0\\
+			-\kappa & 0 & \tau\\
+			0 & -\tau & 0
+		\end{pmatrix}\begin{pmatrix}
+			T\\
+			N\\
+			B
+		\end{pmatrix}
+	\end{equation}
+\end{theorem}
+
+\vspace{1mm}
+
+\begin{lemma}
+	Let $c: \intoo{a,b} \to \mathbb{R}^3$ be a strongly regular curve. Then
+
+	\begin{equation}
+		B = \frac{c' \times c''}{\norm[0]{c' \times c''}} \qquad N = B \times T \qquad \kappa = \frac{\norm[0]{c' \times c''}}{\norm[0]{c'}^3} \qquad \tau = \frac{\det(c',c'',c''')}{\norm[0]{c' \times c''}^2}
+	\end{equation}
+\end{lemma}
 
 \vspace{1mm}
 
 \begin{definition}
 	Let $U \subseteq \mathbb{R}^2$ be open. A map $x \in C^\infty(U, \mathbb{R}^3)$ is a \emph{coordinate patch} if it is injective and if $x_1 \times x_2 \neq 0$ at all points of $U$. 
+\end{definition}
+
+\vspace{1mm}
+
+\begin{definition}
+	Let $M \subseteq \mathbb{R}^3$ be a smooth surface and let $x: U \to M$ be a coordinate patch. The functions $g_{ij}: U \to \mathbb{R}$ defined by $g_{ij} := \langle x_i,x_j\rangle$ for $i,j = 1,2$ are called the \emph{metric coefficients} of $M$ with respect to the coordinate patch $x$.
 \end{definition}
 
 \vspace{1mm}
@@ -205,4 +279,12 @@ and we define
 		\end{pmatrix}.
 	\end{equation}
 \end{lemma}
+
+\vspace{1mm}
+
+The matrix representation for the \emph{Weingarten map} $L: T_pM \to T_pM$ is given by 
+
+\begin{equation}
+	(L_{ij}) = (g_{ij})^{-1}(l_{ij})^t
+\end{equation}
 \end{document}
