--- a/header.tex
+++ b/header.tex
@@ -12,7 +12,7 @@
 
 %Page Setup
 \documentclass[
-	10pt, 
+	8pt, 
 	oneside, 
 	a4paper,
 	reqno,
@@ -163,6 +163,7 @@
 \DeclareMathOperator\sech{sech}
 \DeclareMathOperator\Length{Length}
 \DeclareMathOperator\Area{Area}
+\DeclareMathOperator\tr{tr}
 %\usepackage{hhline}
 %\usepackage{booktabs} 
 %\usepackage{array}
